--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         heyecan vericidir. Oyunun temposu hızla artarken, kazanmak için dikkatli plan yapmanız gerekir.
                     </div>
                 </div>
-                <div class="t-col t-col_6 t-align_center"><img class="t177__img t-img"
+                <div class="t-col t-col_6 t-align_center"><img loading="lazy" class="t177__img t-img"
                                                                src="images/tild3337-3534-4036-a139-313237663438__-__empty___81.png"
                                                                data-original="images/tild3337-3534-4036-a139-313237663438___81.png"
                                                                imgfield="img"
@@ -313,7 +313,7 @@
          data-bg-color="#ffffff"> <!-- T165 -->
         <div class="t165">
             <div class="t-container">
-                <div class="t165__col-top t-col t-col_6 t165__vmiddle t165__left"><img class="t165__img t-img"
+                <div class="t165__col-top t-col t-col_6 t165__vmiddle t165__left"><img loading="lazy" class="t165__img t-img"
                                                                                        src="images/tild6264-3233-4162-b566-653136666361__-__empty___82.png"
                                                                                        data-original="images/tild6264-3233-4162-b566-653136666361___82.png"
                                                                                        imgfiled="img"
@@ -365,7 +365,7 @@
                         kazanır.
                     </div>
                 </div>
-                <div class="t-col t-col_6 t-align_center"><img class="t177__img t-img"
+                <div class="t-col t-col_6 t-align_center"><img loading="lazy" class="t177__img t-img"
                                                                src="images/tild6436-6438-4235-b162-643262663439__-__empty___84.png"
                                                                data-original="images/tild6436-6438-4235-b162-643262663439___84.png"
                                                                imgfield="img"
@@ -724,7 +724,7 @@
                                 </div> <!--/gallery --> </div>
                             <div class="t754__col_left t-col t754__mobile-custom-gallery">
                                 <ul class="t754__mobile-custom-gallery-list">
-                                    <li class="t754__mobile-custom-gallery-list-item"><img
+                                    <li class="t754__mobile-custom-gallery-list-item"><img loading="lazy"
                                             class="t754__mobile-custom-gallery-list-item-image"
                                             src="images/tild3336-3032-4364-b963-323331646630___-_2024-12-02t172400.png"
                                             data-zoom-target="0" data-zoomable="yes"
@@ -789,7 +789,7 @@
                                 </div> <!--/gallery --> </div>
                             <div class="t754__col_left t-col t754__mobile-custom-gallery">
                                 <ul class="t754__mobile-custom-gallery-list">
-                                    <li class="t754__mobile-custom-gallery-list-item"><img
+                                    <li class="t754__mobile-custom-gallery-list-item"><img loading="lazy"
                                             class="t754__mobile-custom-gallery-list-item-image"
                                             src="images/tild3639-6431-4133-b238-626666653331___94.png"
                                             data-zoom-target="0" data-zoomable="yes"
@@ -854,7 +854,7 @@
                                 </div> <!--/gallery --> </div>
                             <div class="t754__col_left t-col t754__mobile-custom-gallery">
                                 <ul class="t754__mobile-custom-gallery-list">
-                                    <li class="t754__mobile-custom-gallery-list-item"><img
+                                    <li class="t754__mobile-custom-gallery-list-item"><img loading="lazy"
                                             class="t754__mobile-custom-gallery-list-item-image"
                                             src="images/tild3237-3032-4666-b635-333031396631___96.png"
                                             data-zoom-target="0" data-zoomable="yes"
@@ -919,7 +919,7 @@
                                 </div> <!--/gallery --> </div>
                             <div class="t754__col_left t-col t754__mobile-custom-gallery">
                                 <ul class="t754__mobile-custom-gallery-list">
-                                    <li class="t754__mobile-custom-gallery-list-item"><img
+                                    <li class="t754__mobile-custom-gallery-list-item"><img loading="lazy"
                                             class="t754__mobile-custom-gallery-list-item-image"
                                             src="images/tild6439-6635-4463-b461-333133666438___77.png"
                                             data-zoom-target="0" data-zoomable="yes"
@@ -984,7 +984,7 @@
                                 </div> <!--/gallery --> </div>
                             <div class="t754__col_left t-col t754__mobile-custom-gallery">
                                 <ul class="t754__mobile-custom-gallery-list">
-                                    <li class="t754__mobile-custom-gallery-list-item"><img
+                                    <li class="t754__mobile-custom-gallery-list-item"><img loading="lazy"
                                             class="t754__mobile-custom-gallery-list-item-image"
                                             src="images/tild6461-6538-4631-a635-373135386538___-_2025-01-23t113539.png"
                                             data-zoom-target="0" data-zoomable="yes"
@@ -1049,7 +1049,7 @@
                                 </div> <!--/gallery --> </div>
                             <div class="t754__col_left t-col t754__mobile-custom-gallery">
                                 <ul class="t754__mobile-custom-gallery-list">
-                                    <li class="t754__mobile-custom-gallery-list-item"><img
+                                    <li class="t754__mobile-custom-gallery-list-item"><img loading="lazy"
                                             class="t754__mobile-custom-gallery-list-item-image"
                                             src="images/tild3163-3761-4265-a361-376338326666___-_2024-12-12t163121.png"
                                             data-zoom-target="0" data-zoomable="yes"
@@ -1114,7 +1114,7 @@
                                 </div> <!--/gallery --> </div>
                             <div class="t754__col_left t-col t754__mobile-custom-gallery">
                                 <ul class="t754__mobile-custom-gallery-list">
-                                    <li class="t754__mobile-custom-gallery-list-item"><img
+                                    <li class="t754__mobile-custom-gallery-list-item"><img loading="lazy"
                                             class="t754__mobile-custom-gallery-list-item-image"
                                             src="images/tild3434-3064-4833-a133-353035663464___-_2025-01-20t162421.png"
                                             data-zoom-target="0" data-zoomable="yes"
@@ -1179,7 +1179,7 @@
                                 </div> <!--/gallery --> </div>
                             <div class="t754__col_left t-col t754__mobile-custom-gallery">
                                 <ul class="t754__mobile-custom-gallery-list">
-                                    <li class="t754__mobile-custom-gallery-list-item"><img
+                                    <li class="t754__mobile-custom-gallery-list-item"><img loading="lazy"
                                             class="t754__mobile-custom-gallery-list-item-image"
                                             src="images/tild6362-3463-4736-a138-306361616535___-_2024-12-12t141813.png"
                                             data-zoom-target="0" data-zoomable="yes"
