--- a/index1.html
+++ b/index1.html
@@ -1263,7 +1263,7 @@
                     <div class="t572__text t-text t-text_sm" field="text"><strong
                             style="font-size: 20px; color: rgb(0, 0, 0);">İletişim bilgileri</strong><br/><span
                             style="font-size: 16px; color: rgb(0, 0, 0);">Müşteri servisi: (+99450) 616-26-08</span><br/><span
-                            style="font-size: 16px; color: rgb(0, 0, 0);">Email: info@p</span>layboard.lenivo.online<br/><span
+                            style="font-size: 16px; color: rgb(0, 0, 0);">Email: info@p</span>layboard.tanoro.site<br/><span
                             style="font-size: 16px; color: rgb(0, 0, 0);">Kurumsal Ofis Adresi: Azerbaijan,Baku, Nasimi district, Alimardan-bek Topchubashev 11</span>
                     </div>
                 </div>
