--- a/terms.html
+++ b/terms.html
@@ -130,8 +130,8 @@
                                  style="display:block">
                                 <div class="t585__textwrapper">
                                     <div class="t585__text t-descr t-descr_xs" field="li_descr__4303175426422">
-                                        <p>info@playboard.lenivo.online Kullanım Şartları ve Koşulları</p><br/>
-                                        <p>Bu kullanım şartları ve koşulları (“Koşullar”), info@playboard.lenivo.online web sitesini (“Site”) ziyaret eden herkes (“Kullanıcı”) için geçerlidir.</p><br/>
+                                        <p>info@playboard.tanoro.site Kullanım Şartları ve Koşulları</p><br/>
+                                        <p>Bu kullanım şartları ve koşulları (“Koşullar”), info@playboard.tanoro.site web sitesini (“Site”) ziyaret eden herkes (“Kullanıcı”) için geçerlidir.</p><br/>
                                         <h3>Kabul Edilme</h3><br/>
                                         <p>Siteyi ziyaret ederek veya kullanarak, Kullanıcı bu Koşulları kabul etmiş olur. Kullanıcı bu Koşullara uymadığı takdirde Siteyi kullanmamalıdır.</p><br/>
                                         <h3>Kullanım Hakları ve Sorumluluklar</h3><br/>
